--- a/Product_Image_Similarity_Search.ipynb
+++ b/Product_Image_Similarity_Search.ipynb
@@ -1125,19 +1125,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 976
+          "height": 959
         },
         "id": "ozeco7_Fck4I",
-        "outputId": "8fdac46a-0c74-4444-ef21-e996e9d3fae6"
+        "outputId": "4512c0d7-7f02-44f5-ff82-13df9bdf6793"
       },
-      "execution_count": 96,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original image\n",
-            "\tTurtle Check Men Navy Blue Shirt\n"
+            "Original image\n"
           ]
         },
         {
@@ -1161,7 +1160,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\tPuma Men Pack of 3 Socks\n"
+            "Puma Men Pack of 3 Socks\n"
           ]
         },
         {
